--- a/contact.css
+++ b/contact.css
@@ -2,29 +2,46 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url('background.png');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+.page {
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 100%;
 }
 
 .container {
     max-width: 600px;
-    margin: 50px auto;
+    margin: 130px auto;
     padding: 20px;
     background-color: white;
+    color: black; /* Ensure the text color inside the container is black */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
 
-img {
-    display: block;
-    margin: 0 auto 20px;
-    max-width: 100%;
-    height: auto;
-}
-
-header {
+nav {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    background-color: rgba(45, 39, 231, 0.5);
+    background-color: rgb(42, 96, 83);
+    width: 98%;
+    height: 100px;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .logo {
@@ -38,10 +55,6 @@ header {
     color: white;
 }
 
-.contact {
-    color: white;
-}
-
 form {
     display: flex;
     flex-direction: column;
@@ -49,6 +62,7 @@ form {
 
 label {
     margin-bottom: 5px;
+    color: black; /* Ensure label text color is black */
 }
 
 input[type="text"], input[type="email"], input[list] {
@@ -75,11 +89,8 @@ input[type="submit"]:hover {
     background-color: #0165cf;
 }
 
-footer {
+.footer {
     text-align: center;
-    margin-top: 20px;
-}
-
-footer small {
-    color: #666;
+    padding: 10px;
+    width: 100%;
 }
