--- a/contact.css
+++ b/contact.css
@@ -35,12 +35,13 @@ nav {
     justify-content: space-between;
     padding: 20px;
     padding-right: 20px;
-    background-image: url('background.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.6)), url('background.png');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     width: 98%;
     height: 100px;
+    border-bottom: 1px solid burlywood;
     box-shadow: 0 0 100px rgba(0, 0, 0, 1);
     border-radius: 8px;
     align-items: center;
