--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('background.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.1)), url('background.png');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -25,18 +25,20 @@ nav {
     justify-content: space-between;
     padding: 20px;
     padding-right: 20px;
-    background-image: url('background.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.6)), url('background.png');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     width: 98%;
     height: 100px;
     box-shadow: 0 0 100px rgba(0, 0, 0, 1);
-    border-radius: 8px;
+    border-bottom: 1px solid burlywood;
+    border-radius: 1px;
     align-items: center;
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
     z-index: 1;
 }
 
