--- a/index.css
+++ b/index.css
@@ -59,11 +59,13 @@ nav {
     text-align: center;
     color: rgb(255, 255, 210);
     padding: 20px;
-    margin: 130px 0 20px 0;
+    margin: 130px 0 60px 0;
 }
 
 .welcome-message h1 {
-    margin: 0;
+    font-size: 50px;
+    margin: 20px;
+
 }
 
 .content {
